--- a/plugin/locale/cs/LC_MESSAGES/Foreca.po
+++ b/plugin/locale/cs/LC_MESSAGES/Foreca.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Foreca 2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-11-24 22:18+0100\n"
-"PO-Revision-Date: 2011-11-24 22:27+0100\n"
+"PO-Revision-Date: 2011-11-27 22:35+0100\n"
 "Last-Translator: Bag58\n"
 "Language-Team: ims\n"
 "MIME-Version: 1.0\n"
@@ -113,7 +113,7 @@ msgstr "Zvolte poměr stran..."
 #: plugin.py:254
 #: plugin.py:279
 msgid "Temp"
-msgstr "Tepl"
+msgstr "Teplota"
 
 #: plugin.py:281
 msgid "°C"
