Detail line in forecast condensed to show more text in SD screen Grading of temperature colors reworked Some code cosmetics Translation code simplified: Setting the os LANGUAGE variable isn't needed anymore Typos in German localization fixed

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-﻿Weltweite Wettervorhersage für 10 Tage mit Satellitenbildern, Wetter-Videos und vielem mehr. 
+Weltweite Wettervorhersage für 10 Tage mit Satellitenbildern, Wetter-Videos und vielem mehr. 
 
 Das Plugin zeigt Wetterprognosen bis maximal 9 Tage im voraus. Die Ausgabe erfolgt mit grafischen Symbolen und kurzen Erklärungen über die Wetterlage. Außerdem können Slideshows über Bewölkung und Niederschlag abgerufen werden. 
 
