Many world-wide cities added. Thanks to AnodA Hungarian and Slovakian localization added. Thanks to torpe

--- a/README
+++ b/README
@@ -14,5 +14,5 @@ Die jeweiligen Tastenfunktionen werden durch Drücken der Help-Taste angezeigt.
 
 Quelle der Prognosen und Wetterkarten ist das finnische Unternehmen Foreca. 
 
-Weitere Informationen und Screenshots gibt es bei Dreambox-Blog unter Foreca Wettervorhersage und Neue Foreca Version. 
+Weitere Informationen und Screenshots gibt es bei Dreambox-Blog unter "Foreca Wettervorhersage" [http://www.dreambox-blog.com/index.php/5446/foreca-wettervorhersage-mit-satellitenbildern-und-mehr] und "Neue Foreca Version" [http://www.dreambox-blog.com/index.php/6590/neue-version-des-foreca-wettervorhersage-plugins-behebt-diverse-probleme]. 
 
