--- a/plugin/locale/Default.pot
+++ b/plugin/locale/Default.pot
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Foreca 3.0.0\n"
+"Project-Id-Version: Foreca 3.1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-21 09:30+0100\n"
 "PO-Revision-Date: 2012-09-21 12:47+0200\n"
@@ -621,4 +621,7 @@ msgstr ""
 
 #: plugin.py:2387
 msgid "Weather forecast for the upcoming 10 days"
+msgstr ""
+
+msgid "Font size in slideshow"
 msgstr ""
