display in extension menu optionaly

--- a/plugin/locale/cs/LC_MESSAGES/Foreca.po
+++ b/plugin/locale/cs/LC_MESSAGES/Foreca.po
@@ -667,3 +667,7 @@ msgstr "Prognóza počasí na následujících 10 dní"
 
 msgid "Font size in slideshow"
 msgstr "Velikost písma v prezentaci"
+
+msgid "Display in extensions menu"
+msgstr "Zobrazovat v menu rozšíření"
+
